--- a/ArtGalleryDrow/app/src/main/AndroidManifest.xml
+++ b/ArtGalleryDrow/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".controller.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,9 +17,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BuyerActivity"
+            android:name=".controller.BuyerActivity"
             android:label="@string/title_activity_buyer"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".controller.RegisterActivity"></activity>
     </application>
 
 </manifest>
