--- a/ArtGalleryDrow/app/src/main/AndroidManifest.xml
+++ b/ArtGalleryDrow/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controller.LoginActivity">
+        <activity android:name=".controller.Controller.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,16 +22,21 @@
             </intent-filter>
         </activity>
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+            android:theme="@style/Base.Theme.AppCompat"
+            android:screenOrientation="portrait"/>
         <activity
-            android:name=".controller.BuyerActivity"
+            android:name=".controller.Controller.BuyerActivity"
             android:label="@string/title_activity_buyer"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".controller.RegisterActivity" />
-        <activity android:name=".controller.SellerActivity" />
-        <activity android:name=".controller.TempTestActivity" />
-        <activity android:name=".controller.UploadPreview" />
-        <activity android:name=".controller.UserProfileActivity" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".controller.Controller.RegisterActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".controller.Controller.SellerActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".controller.Controller.UploadPreview"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".controller.Controller.UserProfileActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
