--- a/ArtGalleryDrow/app/build.gradle
+++ b/ArtGalleryDrow/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "com.example.lukas.artgallerydrow"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -30,7 +30,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
+//    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.7'
+
 
     compile 'com.github.bumptech.glide:glide:3.6.1'
     testCompile 'junit:junit:4.12'
