--- a/ArtGalleryDrow/app/src/main/AndroidManifest.xml
+++ b/ArtGalleryDrow/app/src/main/AndroidManifest.xml
@@ -37,6 +37,12 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".controller.Controller.UserProfileActivity"
             android:screenOrientation="portrait"/>
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+        <!--<uses-permission android:name="android.permission.CAMERA" />-->
+        <!--<uses-feature android:name="android.hardware.camera" />-->
+        <!--<uses-feature android:name="android.hardware.camera.autofocus" />-->
     </application>
 
 </manifest>
